# PuntualMed

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/ai/: models.py  provider.py  repository.py  router.py  schemas.py  service.py
backend/app/api/: health.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/meds/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/notifications/: models.py
backend/app/reminders/: models.py  repository.py  schemas.py  service.py  worker.py
backend/app/symptoms/: models.py  router.py
backend/app/users/: router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 040538433124_add_notified_user_to_intake_logs.py  08ec92550124_create_symptoms.py  679966472abd_create_ai_messages.py  cb03ecb253f6_create_medications.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_ai_models.py  test_ai_provider.py  test_ai_repository.py  test_ai_router.py  test_ai_service.py  test_config.py  test_cors.py  test_database.py  test_main.py  test_meds_models.py  test_meds_router.py  test_meds_service.py  test_notifications_models.py  test_recipe_extraction.py  test_reminders_service.py  test_security.py  test_symptoms_models.py  test_symptoms_router.py  test_users_router.py  test_users_service.py
docs/: design.md
mobile/: app.json  jest-setup.ts  nativewind-env.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+75 files in other folders)
